2003-12-26  Martin Mares  <mj@ucw.cz>

	* lib/header.h (PCI_*_MASK): Cast to pciaddr_t explicitly.

	* lib/pci.h: Types declared in <sys/types.h> should be usable on all
	platforms we currently support, so kill the forest of #ifdef's and
	use them in all cases.

	* lib/pci.h: Use ULONG_MASK to decide whether we should use long
	or long long to represent a 64-bit address. Killed HAVE_LONG_ADDRESS.
	Define format strings for addresses, port numbers and IRQ numbers
	directly in pci.h.

	* lib/proc.c (proc_scan): Use PCIADDR_T_FMT for scanf'ing addresses.

2003-12-26  Marco Gerards  <metgerards@student.han.nl>

	Added support for the GNU Hurd (cleaned up by Martin Mares):

	* lib/configure [GNU]: Use the i386 ports for configuration access.
	* lib/i386-ports.c: Don't call iopl() on the Hurd.
	* lib/pci.h [OS_GNU]: Include <sys/types.h> and use it for defining
	u8 to u32.

2003-12-26  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_pcix_bridge, show_pcix_nobridge): Don't forget to call
	config_fetch() to ensure that the registers have been read. Thanks to
	Bill Wood <bill.wood@hp.com> for the patch.

	* lspci.c: Ensure that failure of config_fetch() is handled correctly
	at all places.

	* lspci.man: There was one more explicit reference to /usr/share/pci.ids.
	Changed to @SHAREDIR@. Patch from Maciej W. Rozycki <macro@ds2.pg.gda.pl>.

	* setpci.c (main): Better error messages.

	* setpci.c (ex_op): The demo mode should disable only writing, not reading.

	* setpci.man: The documentation was inconsistent on what should -D do.
	Document the new behaviour.

	* pciutils.h, common.c, setpci.c: Introduced a NONRET macro encapsulating
	the GCC specific __attribute__((noreturn)) and killed the hack with
	redefining __attribute__ on non-GCC compilers.

	* Makefile: Added missing dependencies. Parallel builds work now.
	Problem reported by Andreas Haumer <andreas@xss.co.at>, but I chose
	a different fix.

	* Makefile (MANDIR): Use `:=' instead of `=' to avoid executing the shell